# agent-pptx-mini-notebooklm

./: .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP.md  LAYOUT_ENGINE.md  QUICK_START.md  QUICK_START_JP.md  README.md  electron-builder.yml  electron.vite.config.ts  index.html  layout_blueprint.pptx  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  tsconfig.json  tsconfig.node.json  tsconfig.renderer.json
.github/workflows/: gitleaks.yml
electron/: main.ts  preload.ts
electron/ipc/: chat-handler.ts  copilot-runtime.ts  image-handler.ts  pptx-handler.ts  project-zip.ts  settings-handler.ts  theme-handler.ts
public/: brand-style-samples.html
samples/: layout_blueprint.pptx  sample1.pptx  sample2.pptx  sample3.pptx
samples/jp/: Microsoft Copilot Studio 導入ガイド.pptapp
scripts/: __init__.py  download-model.mjs  extract_template_meta.py  generate-icon-catalog.mjs  generate-icon-dict.mjs  google_image_search.py  notebooklm_generate.py  pptx-python-runner.py  pptx_merge.py  slide_renderer.py  strip_fonts.py  style_config.py
scripts/layout/: __init__.py  com_text_measure.py  constraint_solver.py  font_text_measure.py  hybrid_layout.py  layout_blueprint.py  layout_specs.py  layout_validator.py
scripts/raptor/: download_model.py  embed_service.py  raptor_builder.py  raptor_retriever.py
scripts/tempfiles/: generate_sample_layout_pptx.py
skills/manipulation-pptx/: SKILL.md
skills/pptx-design-styles/: SKILL.md
skills/slide-storyboard/: SKILL.md
src/: App.tsx
workflows/: create-pptx.md  poststaging.md  system-prompts.json
(+55 files in other folders)
